--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,7 @@ body {
   line-height: 30px;
   background-color: #ffffff;
   color: #000000;
-  width: 1440px;
+  min-width: 1440px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -1293,6 +1293,7 @@ body {
 .main-container {
   margin: 0 auto;
   width: 1440px;
+  flex-grow: 1;
 }
 
 .catalog-container {
@@ -1305,15 +1306,55 @@ body {
   background-color: #ebebeb;
 }
 
+.cards {
+  padding: 69px 72px 20px 72px;
+
+}
+
 .cards-list {
   display: grid;
   grid-template-columns: 360px 360px;
   gap: 40px;
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .cards-item {
+  position: relative;
+  min-height: 468px;
+}
 
+.product-card-image:hover  {
+  opacity: 0.3;
+}
+
+
+/* .product-card-images {
+  box-shadow: inset 0 0 0 3px #af4fff;
+  border: none;
+  color: #af4fff;
+} */
+
+.cards-item .detailed-button {
+  display: none;
+}
+
+.cards-item:hover .detailed-button {
+  display: block;
+}
+
+.cards-item:focus .product-card-title  {
+  display: none;
+  color: #af4fff;
+  border: solid 3px #af4fff;
+  /* box-shadow: inset 0 0 0 3px #af4fff; */
+
+}
+
+.product-subtitle {
+  display: flex;
+  justify-content: space-between;
 }
 
 .catalog-inner {
@@ -1354,6 +1395,7 @@ body {
 }
 
 .catalog-filter-group {
+  position: relative;
   margin: 0;
   margin-bottom: 40px;
   padding: 0;
@@ -1429,8 +1471,13 @@ body {
 .catalog-filter-list {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
+
+.catalog-filter-item {
+  margin-bottom: 15px;
+}
 
 
 .filters-container {
@@ -1447,6 +1494,9 @@ body {
 
 .catalog-form {
   padding-left: 196px;
+  padding-right: 69px;
+  margin-top: 71px;
+
 }
 
 .range {
@@ -1458,6 +1508,8 @@ body {
   height: 2px;
   margin-bottom: 16px;
   background-color: #dcdcdc;
+  width: 200px;
+  margin-left: 5px;
 }
 
 .range-bar {
@@ -1503,7 +1555,7 @@ body {
 
 .catalog-filter-label {
   display: flex;
-  margin-right: 36px;
+  margin-right: 26px;
   opacity: 0.3;
 }
 
@@ -1568,7 +1620,6 @@ body {
   margin-top: 25px;
   margin-bottom: 25px;
   padding-left: 75px;
-  margin-right: auto;
 }
 
 .sort-list {
@@ -1576,9 +1627,46 @@ body {
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
-
+  padding: 0;
+  padding-right: 140px;
+  padding-top: 30px;
 }
 
+.select {
+  padding-top: 10px;
+  padding-left: 50px;
+}
+
+.sorting-type {
+  margin-right: auto;
+}
+
+.sort-item-down {
+  color: #000000;
+  background-color: transparent;
+  background-image: url("../img/icon-down.svg");
+  background-repeat: no-repeat;
+  margin-top: 3px;
+  margin-left: 1px;
+  /* margin: 0; */
+  /* opacity: 0.2; */
+  width: 11px;
+  height: 10px;
+}
+
+.sort-item-up {
+  color: #000000;
+  background-color: transparent;
+  background-image: url("../img/icon-up.svg");
+  background-repeat: no-repeat;
+  /* margin: 0; */
+  margin-top: 3px;
+  margin-left: 4px;
+  cursor: pointer;
+  opacity: 0.2;
+  width: 11px;
+  height: 10px;
+}
 
 .catalog-filter-title {
   font-family: "Rubik", sans-serif;
@@ -1588,6 +1676,18 @@ body {
   line-height: 20px;
   letter-spacing: -0.02em;
   color: #000000;
+  margin-bottom: 25px;
+}
+
+.catalog-filter-title::after {
+  content: "";
+  position: absolute;
+  top: -15px;
+  left: 1px;
+  right: 9px;
+  background-color: #000000;
+  height: 2px;
+  width: 200px;
 }
 
 .control-label {
@@ -1609,7 +1709,27 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
+  border: none;
+  background-color: transparent;
+  position: relative;
+  z-index: 1;
+  padding-left: 55px;
 }
+
+.button-show::before {
+  content: "";
+  border-bottom: 8px solid #ffe17f;
+  position: absolute;
+  top: -4px;
+  left: 0;
+  width: 220px;
+  height: 50%;
+  z-index: -1;
+}
+
+
+
+
 
 .select-control {
   background-repeat: no-repeat;
@@ -1646,6 +1766,7 @@ body {
   line-height: 24px;
   letter-spacing: -0.02em;
   color: #000000;
+  margin: 0;
 }
 
 .product-card-subtitle {
@@ -1659,6 +1780,7 @@ body {
 }
 
 .detailed-button {
+
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -1668,7 +1790,27 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
+  position: relative;
+  top: -264px;
+  right: 0;
+  bottom: 0;
+  left: 0px;
+  z-index: 1;
+  padding-left: 40px;
+  text-decoration: none;
 }
+
+.detailed-button::before {
+  content: "";
+  border-bottom: 8px solid #ffe17f;
+  position: absolute;
+  top: -4px;
+  left: 70px;
+  width: 220px;
+  height: 50%;
+  z-index: -1;
+}
+
 
 .label-new {
   font-family: "Raleway", sans-serif;
@@ -1682,6 +1824,15 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.6);
+  border-radius: 50%;
+  border: 1px solid #000000;
+  display: flex;
+  justify-content: center;
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 27px;
+  right: 27px;
 }
 
 .cards-button {
@@ -1696,6 +1847,50 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
+  background-color: transparent;
+  text-decoration: none;
+  padding: 20px 292px 20px 301px;
+  box-shadow: inset 0 0 0 3px #000000;
+  border: none;
+  margin-bottom: 51px;
+}
+
+.cards-button:hover {
+  box-shadow: inset 0 0 0 3px #0000001a;
+  border: none;
+}
+
+.cards-button:focus {
+  box-shadow: inset 0 0 0 5px #AF4FFF;
+  border: none;
+}
+
+.cards-button:active {
+  box-shadow: inset 0 0 0 3px #000000;
+  border: none;
+  opacity: 0.3;
+}
+
+/* pagination */
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  background-color: #ebebeb;
+  width: 760px;
+}
+
+.pagination-list {
+  display: flex;
+  list-style-type: none;
+  text-decoration: none;
+  width: 160px;
+  padding: 0;
+}
+
+.pagination-item {
+
+
 }
 
 .pagination-button {
@@ -1709,20 +1904,56 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
+  border: none;
+  width: 127px;
+  padding-left: 29px;
+}
+
+.pagination-button:hover {
+  background-color: #dcdcdc;
+}
+
+.pagination-button:focus {
+  box-shadow: inset 0 0 0 3px #af4fff;
+  background-color: #f0f0f0;
+}
+
+.pagination-button:active {
+  background-color: #dcdcdc;
+  opacity: 0.3;
 }
 
 .pagination-link {
-  font-family: Rubik;
+  font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
-  color: #444444;
-  opacity: 0.3;
+  color: #4444444d;
+  text-decoration: none;
+  display: block;
+  box-sizing: border-box;
+  min-width: 38px;
+  min-height: 38px;
+  padding-top: 8px;
+  box-shadow: inset 0 0 0 5px transparent;
 }
 
+.pagination-link:hover {
+  color: #444444;
+  box-shadow: inset 0 0 0 5px transparent;
+}
 
+.pagination-link:focus {
+  color: #000000;
+  box-shadow: inset 0 0 0 5px #af4fff;
+}
+
+.pagination-link:active {
+  color: #4444441a;
+  box-shadow: inset 0 0 0 5px transparent;
+}
 
 
 
@@ -1734,9 +1965,7 @@ body {
   background-color:#444444;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  padding-left: 140px;
-  padding-right: 140px;
+  justify-content: center;
 }
 
 .contact-footer {
@@ -1776,6 +2005,8 @@ body {
   padding-top: 133px;
   padding-bottom: 61px;
   width: 600px;
+  padding-left: 113px;
+  padding-right: 70px;
 }
 
 .footer-navigation-list {
