--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,10 +168,6 @@ body {
   text-decoration: none;
 }
 
-/* .customer-list:first-child{
-  margin-right: auto;
-} */
-
 .customer-navigation-item {
   display: flex;
 }
@@ -641,7 +637,7 @@ body {
 .active, .dot:hover {
   background-color: #717171;
 }
-
+/*
 @-webkit-keyframes fade {
   from{opacity:.4}
   to{opacity:1}
@@ -650,13 +646,21 @@ body {
 @keyframes fade {
   from{opacity:.4}
   to{opacity:1}
-}
+} */
 
 .product-slide {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 43px;
+}
+
+.fade {
+  display: none;
+/* -webkit-animation-name: fade;
+-webkit-animation-duration: 1.5s;
+animation-name: fade;
+animation-duration: 1.5s; */
 }
 
 .slide-foto {
